# omniquery-explorer

./: .dockerignore  .gitignore  Dockerfile  IMPROVEMENTS.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.local-db.yml  docker-compose.yml  pyproject.toml  run-ask.sh  run-common.sh  run-explore.sh  run-profile.sh  run-schema.sh  run-suggest.sh  run.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/oracle-client/: README.md
.devcontainer/scripts/: setup-oracle-client.sh
.github/workflows/: ci.yml  release.yml
.logs/: omniquery-2026-04-30.logs
.tmp/aws_import/: airline_loyalty_program_postgres.sql  airline_passenger_satisfaction_mysql.sql  bank_customer_churn_postgres.sql  hospital_patient_records_postgres.sql  maven_fuzzy_factory_mysql.sql  restaurant_orders_postgres.sql  streaming_video_subscriptions_mysql.sql  uk_train_rides_mysql.sql
.tmp/aws_import/restaurant_orders/__MACOSX/: ._Restaurant Orders
.tmp/aws_import/restaurant_orders/__MACOSX/Restaurant Orders/: ._create_restaurant_db.sql  ._menu_items.csv  ._order_details.csv  ._restaurant_db_data_dictionary.csv
.tmp/aws_import/streaming_video_subscriptions/__MACOSX/: ._Subscription Cohort Analysis Data Dictionary.csv  ._Subscription Cohort Analysis Data.csv
deploy/k8s/: configmap.yaml  deployment.yaml  ingress.example.yaml  namespace.yaml  secret.example.yaml  service.yaml
docs/: DEPLOYMENT.md
prompts/: plan_proposal.md
scripts/aws_import/: README.md  import_airline_loyalty_program_postgres.sh  import_airline_passenger_satisfaction_mysql.sh  import_airlines_airports_flights_oracle.sh  import_all_local_docker.sh  import_bank_customer_churn_postgres.sh  import_hospital_patient_records_postgres.sh  import_maven_fuzzy_factory_mysql.sh  import_nyc_taxi_trips_oracle.sh  import_restaurant_orders_postgres.sh  import_sp500_stock_prices_oracle.sh  import_streaming_video_subscriptions_mysql.sh  import_uk_train_rides_mysql.sh
scripts/aws_import/lib/: aws_import_common.sh
src/omniquery/: config.py
src/omniquery/adapters/cli/: charts.py  console.py  main.py
src/omniquery/adapters/streamlit_ui/: app.py  runner.py  state.py
src/omniquery/adapters/web/: app.py  rate_limit.py  runner.py  schemas.py  security.py
src/omniquery/application/agents/: eda_session_graph.py
src/omniquery/application/use_cases/: run_eda_use_case.py
src/omniquery/domain/entities/: analysis_result.py  column.py  database_schema.py  eda_query.py  proposed_question.py  scored_table.py  table.py  table_profile.py
src/omniquery/domain/ports/inbound/: eda_use_case.py
src/omniquery/domain/ports/outbound/: database_port.py  embedding_port.py  llm_port.py  profiling_port.py
src/omniquery/infrastructure/: container.py
src/omniquery/infrastructure/cache/: cached_database.py  cached_embedding.py  disk_cache.py  semantic_cache.py
src/omniquery/infrastructure/db/: adapter_factory.py  base_sql_adapter.py  duckdb_adapter.py  engine_pool.py  mssql_adapter.py  mysql_adapter.py  oracle_adapter.py  postgresql_adapter.py  sql_guard.py  sql_profiling_adapter.py  sqlite_adapter.py  statement_timeout.py
src/omniquery/infrastructure/governance/: cost_guard.py  pii_policy.py
src/omniquery/infrastructure/graph/: schema_graph_service.py  schema_linker.py
src/omniquery/infrastructure/llm/: anthropic_adapter.py  bedrock_adapter.py  i18n.py  llm_factory.py  llm_prompts.py  memory_factory.py  ollama_adapter.py  ollama_embedding_adapter.py  openai_adapter.py  vertex_adapter.py
src/omniquery/infrastructure/logging/: __init__.py  agent_observability.py
src/omniquery/infrastructure/observability/: tracing.py
src/omniquery/infrastructure/persistence/: models.py  session_store.py
src/omniquery/infrastructure/persistence/migrations/: env.py  script.py.mako
src/omniquery/infrastructure/persistence/migrations/versions/: 202605170001_initial.py
tests/: conftest.py
tests/e2e/: test_schema_linking_e2e.py
tests/eval/: README.md  dataset.py  runner.py  test_harness_meta.py
tests/eval/datasets/: ecommerce.yaml
tests/eval/fixtures/: ecommerce.sql
tests/integration/db/: test_sqlite_adapter.py
tests/integration/graph/: test_graph_visualization.py  test_schema_graph_service_integration.py  test_schema_linker_integration.py
tests/unit/: test_config.py  test_proposed_questions_parser.py
tests/unit/application/: test_run_eda_use_case.py
tests/unit/graph/: test_schema_graph_service.py  test_schema_linker.py  test_schema_linker_helpers.py  test_score_tables.py
tests/unit/infrastructure/: test_adapter_factory.py  test_cost_guard.py  test_disk_cache.py  test_engine_pool.py  test_i18n.py  test_llm_factory.py  test_memory_factory.py  test_persistence.py  test_pii_policy.py  test_profiler_quoting.py  test_prompt_locale.py  test_semantic_cache.py  test_sql_guard.py  test_tracing.py
tests/unit/streamlit_ui/: test_state.py
tests/unit/web/: test_ask_stream_cancel.py  test_rate_limit.py
