[tool.poetry]
name = "omniquery-explorer"
version = "0.1.0"
description = "Agentic EDA system via natural language over relational databases"
authors = ["Alejandro"]
readme = "README.md"
packages = [{ include = "omniquery", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
fastapi = "^0.111"
uvicorn = { version = "^0.29", extras = ["standard"] }
typer = ">=0.15.0"
rich = "^13.7"
httpx = "^0.27"
pydantic = "^2.7"
asyncpg = "^0.29"          # PostgreSQL async driver
aiomysql = "^0.2"          # MySQL async driver
oracledb = "^2.2"          # Oracle async-capable driver
greenlet = "^3.5.0"
langgraph = ">=0.2"
langchain-core = ">=0.2"
langchain-ollama = ">=0.1"
networkx = ">=3.3"
matplotlib = ">=3.9"
scipy = "^1.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-mock = "^3.14"

[tool.poetry.scripts]
omniquery = "omniquery.adapters.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
