[project]
name = "omniquery-explorer"
version = "0.1.0"
description = "Agentic EDA system via natural language over relational databases"
authors = [{ name = "Alejandro" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "typer>=0.15.0",
    "rich>=13.7",
    "httpx>=0.27",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "sqlglot>=25.0,<27.0",
    "tenacity>=8.5,<10.0",
    "aiosqlite>=0.20,<1.0",
    "opentelemetry-api>=1.27,<2.0",
    "opentelemetry-sdk>=1.27,<2.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2.0",
    "duckdb-engine>=0.13,<1.0",
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "aiomysql>=0.2,<1.0",
    "oracledb>=2.2,<3.0",
    "greenlet>=3.5.0",
    "langgraph>=0.2",
    "langchain-core>=0.2",
    "langchain-ollama>=0.1",
    "networkx>=3.3",
    "matplotlib>=3.9",
    "scipy>=1.17.1",
]

[project.scripts]
omniquery = "omniquery.adapters.cli.main:app"
omniquery-web = "omniquery.adapters.web.runner:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "bandit>=1.7,<2.0",
    "pip-audit>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "mypy>=1.11,<2.0",
    "types-pyyaml>=6.0,<7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
# Conservative baseline: pyflakes + import order + critical bug rules.
# Tighten rule set incrementally as legacy modules are refactored.
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[tool.mypy]
# Pragmatic typing baseline. We catch the high-value classes of bug
# (undefined names, wrong attribute access, missing return paths) on
# the modules we already curate with annotations; full --strict is
# deferred until the legacy adapters carry stubs of their own.
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
files = [
    "src/omniquery/infrastructure/governance",
    "src/omniquery/infrastructure/observability",
    "src/omniquery/infrastructure/db/engine_pool.py",
    "src/omniquery/infrastructure/db/statement_timeout.py",
    "src/omniquery/adapters/web/rate_limit.py",
    "src/omniquery/adapters/web/schemas.py",
    "src/omniquery/adapters/web/security.py",
]

[tool.bandit]
# Skips:
# - B101 (assert): pytest assert; tests are excluded anyway.
# - B608 (SQL injection via f-string): every SELECT executed by the
#   adapters is parsed and validated through sql_guard, and identifiers
#   in the profiler are quoted with the dialect-aware _quote() helper.
exclude_dirs = ["tests", ".venv", "scripts", "dbs"]
skips = ["B101", "B608"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniquery"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that require external services (Ollama)",
    "eval: text-to-SQL evaluation harness (requires Ollama or external LLM)",
]
